--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         }
     ],
     "require": {
-        "php" : "~7.0",
+        "php" : ">=7.0",
         "matiasmuller/methods-stacks": "*"
     },
     "autoload": {
