--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "authors": [
         {
             "name": "Matias Muller",
-            "email": "matias.muller@hotmail.com",
+            "email": "matias.muller@xxxxxxx.com",
             "homepage": "https://github.com/matiasmuller",
             "role": "Developer"
         }
@@ -39,5 +39,6 @@
     },
     "config": {
         "sort-packages": true
-    }
+    },
+    "minimum-stability": "dev"
 }
